--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#7bb736</color>
+    <color name="colorPrimaryDark">#16c24b</color>
+    <color name="colorAccent">#7bb736</color>
+
+    <color name="colorDivider">#fff5f5f5</color>
+    <color name="bg_primary">#ffffffff</color>
+    <color name="bg_secondary">#fff5f5f5</color>
+
+    <color name="text_color_pri">#ff050505</color>
+    <color name="text_color_sec">#ff5f5f5f</color>
+
+    <color name="colorAuthor">#529ECC</color>
+    <color name="white">#ffffff</color>
+    <color name="transparent">#00ffffff</color>
+    <color name="red_light">#ffff4444</color>
+    <color name="green_light">#ff99cc00</color>
+    <color name="blue_light">#ff33b5e5</color>
+    <color name="orange_light">#ffffbb33</color>
+    <color name="gray_drak">#ff5f5f5f</color>
+    <color name="gray_light">#ffA9A9A9</color>
 </resources>
