--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -25,4 +25,18 @@
         <item name="android:textColor">@color/text_color_pri</item>
     </style>
 
+    <style name="text_18_sec">
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">@color/text_color_sec</item>
+    </style>
+
+    <style name="text_16_pri">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/text_color_pri</item>
+    </style>
+
+    <style name="text_16_sec">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/text_color_sec</item>
+    </style>
 </resources>
