--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,6 +9,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/white"
         android:orientation="vertical"
         android:padding="20dp">
 
@@ -24,21 +25,22 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="80dp"
-            android:gravity="center_vertical"
-            android:textColor="@color/gray_light"
-            android:text="滑动距离："
-            android:textSize="40dp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="80dp"
+                android:gravity="center_vertical"
+                android:text="滑动距离："
+                android:textColor="@color/gray_light"
+                android:textSize="40dp" />
 
             <TextView
                 android:id="@+id/tv_distance"
                 android:layout_width="match_parent"
                 android:layout_height="80dp"
                 android:gravity="center_vertical"
-                android:textColor="@color/text_color_sec"
                 android:text="0 cm"
+                android:textColor="@color/text_color_sec"
                 android:textSize="40dp" />
 
         </LinearLayout>
@@ -58,6 +60,7 @@
                     android:id="@+id/iv_leftbtn"
                     android:layout_width="@dimen/btn_main_heigth"
                     android:layout_height="@dimen/btn_main_heigth"
+                    android:background="?attr/selectableItemBackgroundBorderless"
                     android:src="@drawable/shape_btn_left_unenable" />
 
                 <TextView
@@ -79,6 +82,7 @@
                     android:id="@+id/iv_rightbtn"
                     android:layout_width="@dimen/btn_main_heigth"
                     android:layout_height="@dimen/btn_main_heigth"
+                    android:background="?attr/selectableItemBackgroundBorderless"
                     android:src="@drawable/shape_btn_right_normal" />
 
                 <TextView
@@ -96,6 +100,6 @@
             android:id="@+id/lv_main"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="30dp"/>
+            android:layout_marginTop="30dp" />
     </LinearLayout>
 </LinearLayout>
