--- a/app/src/main/res/layout/item_experiment.xml
+++ b/app/src/main/res/layout/item_experiment.xml
@@ -1,75 +1,80 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:background="@color/white"
-    android:padding="10dp">
+    android:background="@color/white">
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:background="?attr/selectableItemBackground"
+        android:orientation="vertical"
+        android:padding="10dp">
 
-        <TextView
-            style="@style/text_16_sec"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="车牌/车架号：" />
+            android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/carid"
-            style="@style/text_16_pri"
+            <TextView
+                style="@style/text_16_sec"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="车牌/车架号：" />
+
+            <TextView
+                android:id="@+id/carid"
+                style="@style/text_16_pri"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="浙A 123456" />
+        </LinearLayout>
+
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="浙A 123456" />
+            android:layout_marginTop="5dp">
+
+            <TextView
+                style="@style/text_16_sec"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="总时长：" />
+
+            <TextView
+                android:id="@+id/measureTime"
+                style="@style/text_16_pri"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="00:00:05" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp">
+
+            <TextView
+                style="@style/text_16_sec"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="测量结果：" />
+
+            <TextView
+                android:id="@+id/result"
+                style="@style/text_16_pri"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="未测量" />
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/time"
+            style="@style/text_18_pri"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:text="2018.9.22 16:27"
+            android:textColor="@color/colorAccent" />
     </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            style="@style/text_16_sec"
-            android:text="总时长：" />
-
-        <TextView
-            android:id="@+id/measureTime"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            style="@style/text_16_pri"
-            android:text="00:00:05" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            style="@style/text_16_sec"
-            android:text="测量结果：" />
-
-        <TextView
-            android:id="@+id/result"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            style="@style/text_16_pri"
-            android:text="未测量" />
-    </LinearLayout>
-
-    <TextView
-        android:id="@+id/time"
-        android:layout_gravity="end"
-        style="@style/text_18_pri"
-        android:textColor="@color/colorAccent"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="2018.9.22 16:27" />
-
-</LinearLayout>
+</FrameLayout>
