--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -4,4 +4,7 @@
         <item>朝上</item>
         <item>朝下</item>
     </string-array>
+    <string-array name="menu">
+        <item>删除</item>
+    </string-array>
 </resources>
