--- a/app/src/main/res/layout/item_experiment.xml
+++ b/app/src/main/res/layout/item_experiment.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/white">
@@ -7,74 +8,92 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="?attr/selectableItemBackground"
-        android:orientation="vertical"
-        android:padding="10dp">
+        android:orientation="horizontal">
+
+        <com.github.pavlospt.roundedletterview.RoundedLetterView
+            android:id="@+id/name_preview"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="10dp"
+            app:rlv_backgroundColorValue="@color/colorAccent"
+            app:rlv_titleColor="@android:color/white"
+            app:rlv_titleSize="35sp"
+            app:rlv_titleText="A" />
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:background="?attr/selectableItemBackground"
+            android:orientation="vertical"
+            android:padding="10dp">
 
-            <TextView
-                style="@style/text_16_sec"
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="车牌/车架号：" />
+                android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/carid"
-                style="@style/text_16_pri"
+                <TextView
+                    style="@style/text_16_sec"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="车牌/车架号：" />
+
+                <TextView
+                    android:id="@+id/carid"
+                    style="@style/text_16_pri"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="浙A 123456" />
+            </LinearLayout>
+
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="浙A 123456" />
+                android:layout_marginTop="5dp">
+
+                <TextView
+                    style="@style/text_16_sec"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="总时长：" />
+
+                <TextView
+                    android:id="@+id/measureTime"
+                    style="@style/text_16_pri"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="00:00:05" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp">
+
+                <TextView
+                    style="@style/text_16_sec"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="测量结果：" />
+
+                <TextView
+                    android:id="@+id/result"
+                    style="@style/text_16_pri"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="未测量" />
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/time"
+                style="@style/text_18_pri"
+                android:layout_marginTop="5dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end"
+                android:text="2018.9.22 16:27"
+                android:textColor="@color/colorAccent" />
         </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp">
-
-            <TextView
-                style="@style/text_16_sec"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="总时长：" />
-
-            <TextView
-                android:id="@+id/measureTime"
-                style="@style/text_16_pri"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="00:00:05" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp">
-
-            <TextView
-                style="@style/text_16_sec"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="测量结果：" />
-
-            <TextView
-                android:id="@+id/result"
-                style="@style/text_16_pri"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="未测量" />
-        </LinearLayout>
-
-        <TextView
-            android:id="@+id/time"
-            style="@style/text_18_pri"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="end"
-            android:text="2018.9.22 16:27"
-            android:textColor="@color/colorAccent" />
     </LinearLayout>
 </FrameLayout>
