--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -20,4 +20,15 @@
     <color name="orange_light">#ffffbb33</color>
     <color name="gray_drak">#ff5f5f5f</color>
     <color name="gray_light">#ffA9A9A9</color>
+
+    <color name="main_color_2">#f44836</color>
+    <color name="main_color_3">#f2821e</color>
+    <color name="main_color_4">#d12121</color>
+    <color name="main_color_5">#16c24b</color>
+    <color name="main_color_6">#16a8c2</color>
+    <color name="main_color_7">#2b86e3</color>
+    <color name="main_color_8">#3f51b5</color>
+    <color name="main_color_9">#9c27b0</color>
+    <color name="main_color_10">#cc268f</color>
+    <color name="main_color_11">#39c5bb</color>
 </resources>
