--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,7 +32,7 @@
                 android:gravity="center_vertical"
                 android:text="滑动距离："
                 android:textColor="@color/gray_light"
-                android:textSize="40dp" />
+                android:textSize="35sp" />
 
             <TextView
                 android:id="@+id/tv_distance"
@@ -41,7 +41,7 @@
                 android:gravity="center_vertical"
                 android:text="0 cm"
                 android:textColor="@color/text_color_sec"
-                android:textSize="40dp" />
+                android:textSize="35sp" />
 
         </LinearLayout>
 
